--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mdi/js": "^7.4.47",
-    "@mdi/react": "^1.6.1",
     "@splidejs/react-splide": "^0.7.12",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
