--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
