--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "node src/server.js"
+    "start": "node ./src/server.js"
   },
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
